--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -3,5 +3,8 @@
     <strong>Body:</strong>
     <%= message.body %>
   </p>
-
+  <p>
+    <%= link_to "Show this message", message %>
+    <%= button_to "Destroy this message", message_path(message), method: :delete %>
+  </p>
 </div>
